src/test/resources/org/rust/ide/inspections/fixtures/duplicate_trait_method.rs
trait T {
    fn foo(&self) -> f64;
    fn <error descr="Duplicate trait method 'foo'">foo</error>(&self) -> f64;
}